[package]
name = "yabu"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
default-run = "yabu"

[dependencies]
anyhow = "1.0.55"
argh = "0.1.7"
serde = "1.0.136"
serde_json = "1.0.79"
time = "0.3.7"
tokio = { version = "1.17.0", features = ["full"] }
tz-rs = "0.5.3"
url = "2.2.2"
yabusame = { path = "../yabusame" }
