[package]
name = "yabusame"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
time = { version = "0.3.7", features = ["serde-well-known"] }
tokio = { version = "1.17.0", features = ["parking_lot", "io-util"] }
tz-rs = "0.5.3"
url = "2.2.2"
