[package]
name = "yabuserver"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.55"
argh = "0.1.7"
num-traits = "0.2.14"
rusqlite = "0.26.3"
serde = "1.0.136"
serde_json = "1.0.79"
time = "0.3.7"
tokio = { version = "1.17.0", features = ["full"] }
yabusame = { path = "../yabusame" }
