[package]
name = "yabusite"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.55"
argh = "0.1.7"
askama = "0.11.1"
askama_axum = "0.1.0"
axum = "0.4.6"
time = "0.3.9"
tokio = { version = "1.17.0", features = ["full"] }
tower-http = { version = "0.2.5", features = ["fs"] }
url = "2.2.2"
yabusame = { path = "../yabusame" }
