[package]
name = "yabusite"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.55"
argh = "0.1.7"
axum = "0.5"
axum-macros = "0.2.0"
deadpool = "0.9.2"
notify = "5.0.0-pre.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tera = { version = "1.15.0", features = ["builtins"] }
time = "0.3.9"
tokio = { version = "1.17.0", features = ["full"] }
tower-http = { version = "0.2.5", features = ["fs"] }
url = "2.2.2"
yabusame = { path = "../yabusame" }
